@@ -34,7 +34,8 @@ def get_parser():
     parser.add_argument('input_filenames', help='Input FAST[AQ]'
                         ' sequence filename.', nargs='+')
     parser.add_argument('-o', '--output', help='The name of the output'
-                        ' sequence file.', default="/dev/stdout")
+                        ' sequence file.', default="-",
+                        type=argparse.FileType('w'))
     parser.add_argument('-l', '--length', help='The minimum length of'
                         ' the sequence file.',
                         type=int, default=200)
@@ -43,12 +44,12 @@ def get_parser():
 
 def main():
     args = get_parser().parse_args()
-    outfp = open(args.output, 'w')
+    outfp = args.output
     for filename in args.input_filenames:
         for record in screed.open(filename, parse_description=False):
             if len(record['sequence']) >= args.length:
                 write_record(record, outfp)
-    print('wrote to: ' + args.output, file=sys.stderr)
+    print('wrote to: ' + outfp.name, file=sys.stderr)
 
 if __name__ == '__main__':
     main()
